name:                bSpokeLight
version:             0.1
synopsis:            Custom firmware for the YQ8003 bicycle spoke light
-- description:         
homepage:            https://github.com/nomeata/bSpokeLight
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
build-type:          Simple
extra-source-files:  ChangeLog.md
                     firmware/firmware.bin
cabal-version:       >=1.10
tested-with:         GHC ==8.0.2, GHC==8.2.2

executable bSpokeLight
  main-is:             bSpokeLight.hs
  build-depends:       base >=4.9 && <4.11
  build-depends:       filepath
  build-depends:       bytestring
  build-depends:       bitwise >= 0.1 && <0.2
  build-depends:       JuicyPixels
  build-depends:       optparse-applicative >= 0.13 && <0.15
  build-depends:       split >= 0.2 && <0.3
  build-depends:       file-embed >= 0.0.10 && <0.1
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nomeata/bSpokeLight

