name:                bSpokeLight
version:             0.1
synopsis:            Custom firmware for the YQ8003 bicycle spoke light
description:         This project provides an alternative firmware for LED
                     spoke lights. Currently, only the model YQ8003 (128 LEDs)
                     is supported.
category:            Hardware
homepage:            https://github.com/nomeata/bSpokeLight
license:             MIT
license-file:        LICENSE
author:              Joachim Breitner
maintainer:          mail@joachim-breitner.de
copyright:           2017 Joachim Breitner
build-type:          Simple
extra-source-files:  ChangeLog.md
                     firmware/firmware.bin
                     firmware/firmware.map
cabal-version:       >=1.10
tested-with:         GHC ==7.6.3, GHC ==8.0.2, GHC==8.2.2

executable bSpokeLight
  main-is:             bSpokeLight.hs
  build-depends:       base ==4.12.*
  build-depends:       template-haskell
  build-depends:       filepath
  build-depends:       bytestring
  build-depends:       bitwise ==1.0.*
  build-depends:       JuicyPixels
  build-depends:       optparse-applicative == 0.14.*
  build-depends:       split
  build-depends:       file-embed
  build-depends:       regex-posix == 0.95.*
  build-depends:       Rasterific == 0.7.*
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nomeata/bSpokeLight

